new courses and few fixes

--- a/config/courses.yml
+++ b/config/courses.yml
@@ -5,3 +5,10 @@
     BQACAgI
   Теория:
     BQACAgI
+Прессовые техники в массаже:
+  Памятка:
+    BQACAgI
+  Картина боли:
+    BQACAgI
+  Теория:
+    BQACAgI
