rework for logger

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ MONGO_URL = 'mongo_url'
 YOO_KASSA_TOKEN = 'yoo_kassa_token'
 ALEX_SPOON = 456
 SPOON_TOKEN = 123
+MAIN_LOG_PATH = 'log/main.log'
+ERRORS_LOG_PATH = 'log/error.log'
+OTHER_LOG_PATH = 'log/other.log'
